# github-pr-year-in-review

./: .gitignore  README.md  demo.py  main.py  pyproject.toml
.github/: copilot-instructions.md
github_pr_review/: __init__.py  analyzer.py  cli.py  github_client.py  report_generator.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_github_client.py  test_report_generator.py
