[project]
name = "github-pr-review"
version = "0.1.0"
description = "Analyze GitHub pull requests and generate year-in-review summary reports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "pygithub>=2.8.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
github-pr-review = "github_pr_review.cli:main"
